--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,6 @@
 
     <string name="all_phones">My Cars</string>
     <string name="view_all">View All</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
